[package]
name = "superball"
version = "0.1.0"
authors = ["CryptArchy <CodexArcanum@gmail.com>"]
publish = false

[dependencies]
version = "2.0"
log = "0.3"
log4rs = { version = "0.4", features = ["toml"] }
iron = "*"
router = "*"
urlencoded = "*"
handlebars-iron = "*"
rusqlite = "0.7.3"
time = "0.1.35"

[dependencies.params]
git = "https://github.com/iron/params.git"